--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -57,7 +57,7 @@
     <h1>Survey</h1>
     <p>If you have a moment, we’d appreciate it if you would fill out this survey.</p>
 
-    <form id="surveyForm">
+    <form id="surveyForm" method="post" action="thanks.jsp">
         <!-- Your information -->
         <div class="section-title">Your information:</div>
         <div class="form-section">
@@ -157,3 +157,4 @@
 
 </body>
 </html>
+
